fix cropping on live cam

--- a/src/styles/MainStyles.css
+++ b/src/styles/MainStyles.css
@@ -89,3 +89,14 @@ width: 100%;
 .nextButton span{
     font-size: 1.7em;
 }
+
+/* .containerVideo{
+    width: 320px;
+    overflow:hidden;
+    display:block;
+    height: 240px;
+}
+#glass{
+    margin-left: -160px;
+    margin-top: -120px
+} */
